force-app/main/form-builder/objects/Rule_Condition__c/Rule_Condition__c.object-meta.xml
<CustomObject>
    <label>Rule Condition</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Rule Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>