force-app/main/form-builder/objects/Rule_Condition__c/fields/Not__c.field-meta.xml
<CustomField>
    <fullName>Not__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not</label>
    <type>Checkbox</type>
</CustomField>