force-app/main/form-builder/objects/Rule_Condition__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>GreaterThan</fullName>
            </value>
            <value>
                <fullName>GreaterOrEqual</fullName>
            </value>
            <value>
                <fullName>LessThan</fullName>
            </value>
            <value>
                <fullName>LessOrEqual</fullName>
            </value>
            <value>
                <fullName>Includes</fullName>
            </value>
            <value>
                <fullName>IncludesAny</fullName>
            </value>
            <value>
                <fullName>IncludesAll</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>StartsWith</fullName>
            </value>
            <value>
                <fullName>EndsWith</fullName>
            </value>
            <value>
                <fullName>IsBlank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>