force-app/main/form-builder/objects/Rule_Condition__c/fields/Question_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Question_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Catalog</label>
    <referenceTo>Question_Catalog__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>Rule_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>