force-app/main/form-builder/objects/Rule_Condition__c/fields/Question_Rule__c.field-meta.xml
<CustomField>
    <fullName>Question_Rule__c</fullName>
    <label>Question Rule</label>
    <referenceTo>Question_Rule__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>Rule_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>