force-app/main/form-builder/objects/Rule_Condition__c/fields/Source_Path__c.field-meta.xml
<CustomField>
    <fullName>Source_Path__c</fullName>
    <label>Source Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>