force-app/main/form-builder/objects/Rule_Condition__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <inlineHelpText
  >Warning: condition will be ignored if context is not given on execution</inlineHelpText>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answer</fullName>
            </value>
            <value>
                <fullName>Context</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>